# isaacsim_differential_drive_robot_4wheel

./: CMakeLists.txt  README.md  package.xml  requirements.txt  ros2_pkg_list.txt
launch/: isaac_sim.launch.py
scripts/: all_tf_add.py  controller_add.py  depth_camera_add.py  imu_add.py  isaac_sim_node.py  lidar_add.py  odom_add.py  rgb_camera_add.py  test_gui.py  test_usda.py  tf_add.py  tf_lidar_add.py
test/: test_package.py
usd_assets/: .asset_hash  config.yaml  robot.urdf  robot.usda  robot_third_person.usda  world.usda
usd_assets/configuration/: robot_base.usda  robot_base_full_heirarchy.usda  robot_base_pre_nesting.usda  robot_physics.usda  robot_physics_pre_nesting.usda  robot_sensor.usda  robot_sensor_pre_nesting.usda  robot_sensor_third_person.usda
