<?xml version="1.0"?>
<package format="3">
  <name>isaacsim_differential_drive_robot_4wheel</name>
  <version>0.0.1</version>
  <description>ROS2 interface for controlling a differential drive robot in Isaac Sim</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>robot_state_publisher</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
